--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "3.2.1",
+    "jquery": "^3.2.1",
     "jquery-smooth-scroll": "2.2.0",
     "lazysizes": "4.0.0-rc3",
     "normalize.css": "7.0.0",
@@ -33,6 +33,6 @@
     "postcss-mixins": "6.0.1",
     "postcss-nested": "2.0.4",
     "postcss-simple-vars": "4.0.0",
-    "webpack": "3.4.0"
+    "webpack": "^3.4.0"
   }
 }
